--- a/style.css
+++ b/style.css
@@ -4315,6 +4315,10 @@ footer {
       line-height: normal; } }
 
 @media (max-width: 414px) {
+  .dropdown {
+    width: 100%; }
+    .dropdown button {
+      font-size: 14pt; }
   .circleClose {
     position: absolute;
     top: 5px;
